--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -11,8 +11,8 @@
 						<li>
 							<div class="tour-date"><%= @tour.date %></div>
 							<div class="tour-info"> <%= link_to @tour.title %></div>
-							<div class="tour-ticket"><%= @tour.place %></div>
-              <div class="tour-ticket"><%= @tour.artist %></div>
+							<div class="tour-ticket"><%= raw(@tour.place) %></div><br>
+              <div class="tour-ticket"><%= raw(@tour.artist) %></div><br>
               <div class="tour-ticket"> <%= link_to 'Destroy', @tour, method: :delete, data: { confirm: 'Are you sure?' } %>
                 </div>
 						</li>
