--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -222,8 +222,7 @@
 						<li>
 							<div class="tour-date"><%= tour.date %></div>
 							<div class="tour-info"> <%= tour.title %></div>
-							<div class="tour-ticket"><%= tour.artist %></div>
-							<div class="tour-ticket"><%= link_to 'View', tour, class: "btn btn-xs btn-default" %></div>
+							<div class="text-center"><%= link_to 'View', tour, class: "btn btn-xs btn-default" %></div>
 
 								</div>
 						</li>
