--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -39,6 +39,6 @@
     <%end%>
 		<br>
 			<br>	<br>
-		<p class="text-center"><%= link_to 'New genre', new_album_path, class: 'btn btn-default' %></p>
+		<p class="text-center"><%= link_to 'New Album', new_album_path, class: 'btn btn-default' %></p>
 
 	</div>
