--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@genre, @album, html: { class: 'form-horizontal' } ) do |f| %>
+<%= simple_form_for(@album, html: { class: 'form-horizontal' } ) do |f| %>
 <div class="wrapper">
   <div class="container">
     <div class="row">
